--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -429,36 +429,26 @@
 
 @media (max-width: 480px) {
   .project-type-badge {
-    padding: 0.05rem 0.18rem;
-    font-size: 0.48rem;
-    border-radius: 7px;
-    margin-left: 0.3rem;
-    height: 0.8rem;
-    max-width: 45vw;
-    min-width: 0;
-    display: inline-block;
-    vertical-align: middle;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    box-sizing: border-box;
+    height: 1.6rem;
+    line-height: 1.6rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    /* keep font-size and text as is */
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
 @media (max-width: 360px) {
   .project-type-badge {
-    padding: 0.03rem 0.12rem;
-    font-size: 0.38rem;
-    border-radius: 5px;
-    margin-left: 0.15rem;
-    height: 0.6rem;
-    max-width: 60px;
-    min-width: 0;
-    display: inline-block;
-    vertical-align: middle;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    box-sizing: border-box;
+    height: 1.2rem;
+    line-height: 1.2rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    /* keep font-size and text as is */
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
   }
 }
